Changing connection path

--- a/JDBC Demo/.classpath
+++ b/JDBC Demo/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/ingit.singhal/Downloads/mysql-connector-java-8.0.28-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ingit.singhal/Downloads/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
